--- a/index.html
+++ b/index.html
@@ -2389,7 +2389,7 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
         <div class="about-container">
             <div class="about-card">
                 <h2>ABOUT US</h2>
-                <p>The motive of our website is to provide game links, news, and ratings all in one place through comprehensive resources. We're passionate gamers dedicated to creating the ultimate gaming hub.</p>
+                <p>The motive of our website is to provide game related content such as news, and ratings all in one place through comprehensive resources. We're passionate gamers dedicated to creating the ultimate gaming hub.</p>
             </div>
             
             <div class="about-card">
@@ -2399,7 +2399,7 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
             
             <div class="about-card">
                 <h2>OUR SERVICES</h2>
-                <p>We provide gamers all resources at one platform. Paid promotions of websites and products are accepted. Join our growing gaming community today!</p>
+                <p>We provide gamers all resources at one platform such as news,guides,reviews etc. we are dedicated to improve the experiance of gamers on our platform</p>
             </div>
         </div>
     </section>
