--- a/news.html
+++ b/news.html
@@ -292,7 +292,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="" alt="image" class="w-full h-full object-cover">
+                        <img src="news/dying.jpg" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -307,7 +307,7 @@ Ghost of Yōtei Updates - July 2025</p>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
                             </svg>
-                            1.8k
+                            1.0k
                             <span class="mx-2">•</span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
@@ -322,7 +322,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="" alt="image" class="w-full h-full object-cover">
+                        <img src="news/split.png" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -338,7 +338,7 @@ Ghost of Yōtei Updates - July 2025</p>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
                             </svg>
-                            1.8k
+                            1.1k
                             <span class="mx-2">•</span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
@@ -355,7 +355,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="" alt="image" class="w-full h-full object-cover">
+                        <img src="news/fantastic.jpg" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -370,7 +370,7 @@ Ghost of Yōtei Updates - July 2025</p>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
                             </svg>
-                            1.8k
+                            512
                             <span class="mx-2">•</span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
@@ -387,7 +387,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="" alt="image" class="w-full h-full object-cover">
+                        <img src="news/super.jpg" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -403,7 +403,7 @@ Ghost of Yōtei Updates - July 2025</p>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
                             </svg>
-                            1.8k
+                            1.2k
                             <span class="mx-2">•</span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
@@ -411,17 +411,13 @@ Ghost of Yōtei Updates - July 2025</p>
                             291
                         </div>
                     </div>
-
-
-
-
-                
+  
 
                 <!-- News Card -5 -->
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="" alt="image" class="w-full h-full object-cover">
+                        <img src="news/avatar.webp" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
