--- a/news.html
+++ b/news.html
@@ -805,6 +805,94 @@ Ghost of Yōtei Updates - July 2025</p>
             
             <div class="grid md:grid-cols-2 gap-6">
 
+                <!-- Esports Card -5 -->
+                <div class="news-card glow-effect">
+                    <div class="aspect-video overflow-hidden relative">
+                        <img src="news/bang.webp" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
+                        <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
+                            <div class="flex mb-2">
+                                <span class="tag tag-esports">HOK</span>
+                                <span class="text-xs text-gray-400 ml-auto">July 23, 2025</span>
+                            </div>
+                            <h3 class="text-xl font-bold">Mobile Legends: Bang Bang Tops Viewership</h3>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-300 mb-4"><The latest statistics reveal that Mobile Legends: Bang Bang leads the esports scene with a peak viewership of over 4 million, highlighting its popularity among gamers.
+
+                        Viewership Stats:
+                        Peak viewers: 4,132,224
+                        Continues to dominate the esports viewership charts/p>
+                        <div class="flex items-center">
+                            <div class="flex -space-x-2">
+                                <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Faker portrait, T1 midlaner with determined expression">
+                                <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Keria portrait, T1 support player celebrating">
+                            </div>
+                            <a href="https://www.gamingamigos.com/post/mobile-masters-2025-viewership-records" class="ml-auto px-4 py-2 bg-gray-800 hover:bg-green-600 rounded-lg text-sm font-medium transition">View Details</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Esports Card -4 -->
+                <div class="news-card glow-effect">
+                    <div class="aspect-video overflow-hidden relative">
+                        <img src="news/gen.jpg" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
+                        <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
+                            <div class="flex mb-2">
+                                <span class="tag tag-esports">GEN</span>
+                                <span class="text-xs text-gray-400 ml-auto">July 24, 2025</span>
+                            </div>
+                            <h3 class="text-xl font-bold">Gen.G Esports Dominates League of Legends/h3>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-300 mb-4">Gen.G Esports secured their second international title in just over a week, winning the Esports World Cup after their recent MSI victory, solidifying their status in the competitive scene.</p>
+                        <div class="flex items-center">
+                            <div class="flex -space-x-2">
+                                <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Faker portrait, T1 midlaner with determined expression">
+                                <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Keria portrait, T1 support player celebrating">
+                            </div>
+                            <a href="https://www.gosugamers.net/lol/news/76218-gen-g-are-the-2025-league-of-legends-esports-world-cup-champions" class="ml-auto px-4 py-2 bg-gray-800 hover:bg-green-600 rounded-lg text-sm font-medium transition">View Details</a>
+                        </div>
+                    </div>
+                </div>
+          
+
+                 <!-- Esports Card -3 -->
+                <div class="news-card glow-effect">
+                    <div class="aspect-video overflow-hidden relative">
+                        <img src="news/top.webp" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
+                        <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
+                            <div class="flex mb-2">
+                                <span class="tag tag-esports">THE</span>
+                                <span class="text-xs text-gray-400 ml-auto">July 25, 2025</span>
+                            </div>
+                            <h3 class="text-xl font-bold">Esports World Cup Results </h3>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-300 mb-4">OpTic Gaming claimed victory in the Call of Duty finals, earning 
+                                    60 million.
+                                    Final Standings:
+                                    1st: OpTic Gaming - $600,000
+                                    2nd: Vancouver Surge - $320,000
+                                    3rd: Movistar KOI - $200,000
+                                    4th: Team Heretics - $120,000
+                                    5th-8th: 100 Thieves, OMIT, Boston Breach, Five Fears - $80,000 each
+                                    9th-12th: FaZe Clan, Cloud9, Gentle Mates, Team Falcons - $40,000 each
+                                    13th-16th: Team Orchid, P7 Esports, Team War, G2 Esports - $20,000 each</p>
+                            <div class="flex items-center">
+                            <div class="flex -space-x-2">
+                                <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Faker portrait, T1 midlaner with determined expression">
+                                <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Keria portrait, T1 support player celebrating">
+                            </div>
+                            <a href="https://www.si.com/esports/call-of-duty/esports-world-cup-call-of-duty-finals-recap-optic-gaming" class="ml-auto px-4 py-2 bg-gray-800 hover:bg-green-600 rounded-lg text-sm font-medium transition">View Details</a>
+                        </div>
+                    </div>
+                </div>
+
+
                  <!-- Esports Card -2 -->
                 <div class="news-card glow-effect">
                     <div class="aspect-video overflow-hidden relative">
