--- a/news.html
+++ b/news.html
@@ -811,7 +811,7 @@ Ghost of Yōtei Updates - July 2025</p>
                         <img src="news/bang.webp" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
                         <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
                             <div class="flex mb-2">
-                                <span class="tag tag-esports">HOK</span>
+                                <span class="tag tag-esports">BANG</span>
                                 <span class="text-xs text-gray-400 ml-auto">July 23, 2025</span>
                             </div>
                             <h3 class="text-xl font-bold">Mobile Legends: Bang Bang Tops Viewership</h3>
