--- a/news.html
+++ b/news.html
@@ -818,11 +818,11 @@ Ghost of Yōtei Updates - July 2025</p>
                         </div>
                     </div>
                     <div class="p-6">
-                        <p class="text-gray-300 mb-4"><The latest statistics reveal that Mobile Legends: Bang Bang leads the esports scene with a peak viewership of over 4 million, highlighting its popularity among gamers.
+                        <p class="text-gray-300 mb-4">The latest statistics reveal that Mobile Legends: Bang Bang leads the esports scene with a peak viewership of over 4 million, highlighting its popularity among gamers.
 
                         Viewership Stats:
                         Peak viewers: 4,132,224
-                        Continues to dominate the esports viewership charts/p>
+                        Continues to dominate the esports viewership charts</p>
                         <div class="flex items-center">
                             <div class="flex -space-x-2">
                                 <img class="w-8 h-8 rounded-full border-2 border-green-600" src="https://placehold.co/100" alt="Faker portrait, T1 midlaner with determined expression">
@@ -843,7 +843,7 @@ Ghost of Yōtei Updates - July 2025</p>
                                 <span class="tag tag-esports">GEN</span>
                                 <span class="text-xs text-gray-400 ml-auto">July 24, 2025</span>
                             </div>
-                            <h3 class="text-xl font-bold">Gen.G Esports Dominates League of Legends/h3>
+                            <h3 class="text-xl font-bold">Gen.G Esports Dominates League of Legends</h3>
                         </div>
                     </div>
                     <div class="p-6">
