--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="//code.tidio.co/xzhfajh4htmoye2lxahlyhg9miqjbnhh.js" async></script>
     <script async src="https://script.adquake.com/js/adquake.js" adquake-key="mP2oRFlGAUK93d+1b64xSw=="></script>
     <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <meta charset="UTF-8">
@@ -2737,4 +2738,5 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
 
     
 </script>
+
 
