--- a/guide.html
+++ b/guide.html
@@ -58,6 +58,178 @@
                     <p class="mb-4">Welcome to our comprehensive game setup guide! Whether you're a seasoned gamer or just starting out, this guide will walk you through the entire process of getting your new PC game running smoothly on your laptop.</p>
                     <p>Average setup time: 15-30 minutes depending on game size and internet speed.</p>
                 </div>
+                <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Game Setup & Graphics Tweaks</title>
+  <style>
+    body {
+      background: #121212;
+      color: #e0e0e0;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 700px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #00ffc8;
+    }
+    section {
+      margin-bottom: 40px;
+      background: #1e1e1e;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+    input[type="text"], input[type="number"] {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border: none;
+      border-radius: 5px;
+      background: #2a2a2a;
+      color: #fff;
+      font-size: 1rem;
+    }
+    button {
+      background: #00ffc8;
+      color: #000;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 15px;
+      font-size: 1rem;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: #00b38a;
+    }
+    .suggestions {
+      margin-top: 20px;
+      padding: 15px;
+      background: #2a2a2a;
+      border-left: 4px solid #00ffc8;
+      border-radius: 6px;
+      line-height: 1.5;
+      font-size: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>🎮 Game Setup & Graphics Tweaks</h1>
+
+  <section>
+    <h2>🛠️ Get Custom Graphics Settings</h2>
+    <label for="inputGame">Game Name:</label>
+    <input type="text" id="inputGame" placeholder="e.g., GTA V" />
+
+    <label for="inputGPU">GPU:</label>
+    <input type="text" id="inputGPU" placeholder="e.g., GTX 1650" />
+
+    <label for="inputCPU">CPU:</label>
+    <input type="text" id="inputCPU" placeholder="e.g., Ryzen 5 3600" />
+
+    <label for="inputRAM">RAM (GB):</label>
+    <input type="number" id="inputRAM" placeholder="e.g., 16" min="1" />
+
+    <button onclick="generateGraphicsSummary()">Get Game Settings</button>
+
+    <div class="suggestions" id="graphicsOutput"></div>
+  </section>
+
+  <script>
+   function generateGraphicsSummary() {
+  const game = document.getElementById("inputGame").value.toLowerCase().trim();
+  const gpu = document.getElementById("inputGPU").value.toLowerCase().trim();
+  const cpu = document.getElementById("inputCPU").value.toLowerCase().trim();
+  const ramInput = document.getElementById("inputRAM").value.trim();
+  const ram = parseInt(ramInput);
+
+  if (!game || !gpu || !cpu || !ramInput || isNaN(ram)) {
+    document.getElementById("graphicsOutput").innerHTML = "<em>Please fill in all fields with valid data.</em>";
+    return;
+  }
+
+  let summary = `<strong>🔍 Custom Settings for ${game.toUpperCase()}</strong><br><br>`;
+
+  // Detect GPU tier
+  const gpuLower = gpu.toLowerCase();
+
+  // Helper function to check if GPU string contains any keyword in an array
+  function gpuMatch(keywords) {
+    return keywords.some(keyword => gpuLower.includes(keyword));
+  }
+
+  if (gpuMatch(["gtx 1050", "gtx 1650", "rx 5600", "gtx 1060"])) {
+    summary += "- Graphics Preset: Medium to Low<br>";
+    summary += "- Recommended Resolution: 1080p<br>";
+    summary += "- DLSS/FSR: Off or Balanced (if available)<br>";
+    summary += "- Shadows: Low to Medium<br>";
+    summary += "- Ray Tracing: Off (performance heavy)<br>";
+  } else if (gpuMatch(["rtx 2060", "rtx 3060", "rx 6600", "rx 5700"])) {
+    summary += "- Graphics Preset: High<br>";
+    summary += "- Recommended Resolution: 1080p or 1440p<br>";
+    summary += "- DLSS/FSR: On (balanced or quality mode)<br>";
+    summary += "- Shadows: Medium to High<br>";
+    summary += "- Ray Tracing: Medium (if supported)<br>";
+  } else if (gpuMatch(["rtx 3070", "rtx 3080", "rtx 4070", "rtx 4080", "rx 6800", "rx 6900", "rx 7900"])) {
+    summary += "- Graphics Preset: Ultra<br>";
+    summary += "- Recommended Resolution: 1440p or 4K<br>";
+    summary += "- DLSS/FSR: Quality or Ultra Performance<br>";
+    summary += "- Shadows: High to Ultra<br>";
+    summary += "- Ray Tracing: On (enabled for best visuals)<br>";
+  } else {
+    summary += "- Graphics Preset: Low or Custom<br>";
+    summary += "- Recommended Resolution: 720p or 900p<br>";
+    summary += "- DLSS/FSR: Off<br>";
+    summary += "- Shadows: Low<br>";
+    summary += "- Ray Tracing: Off<br>";
+  }
+
+  // RAM advice
+  if (ram < 8) {
+    summary += "- ⚠️ RAM below 8GB can cause performance issues, close background apps.<br>";
+  } else if (ram < 16) {
+    summary += "- RAM is decent, but 16GB is recommended for smooth gameplay.<br>";
+  } else {
+    summary += "- ✅ RAM is excellent for modern gaming.<br>";
+  }
+
+  // CPU advice
+  if (cpuMatch(["i3", "dual core", "athlon", "pentium"])) {
+    summary += "- ⚠️ CPU may bottleneck in demanding games; consider upgrade.<br>";
+  } else if (cpuMatch(["i5", "ryzen 5"])) {
+    summary += "- CPU suitable for most games at 1080p.<br>";
+  } else if (cpuMatch(["i7", "ryzen 7", "i9", "ryzen 9"])) {
+    summary += "- ✅ High-performance CPU for demanding games and streaming.<br>";
+  } else {
+    summary += "- CPU info unclear, ensure it meets game minimum requirements.<br>";
+  }
+
+  summary += "<br><em>🎯 Pro Tip: Keep GPU drivers updated and close unnecessary apps while gaming.</em>";
+
+  document.getElementById("graphicsOutput").innerHTML = summary;
+
+  // Helper function for CPU check inside main function
+  function cpuMatch(keywords) {
+    return keywords.some(keyword => cpu.includes(keyword));
+  }
+}
+
+  </script>
+
+</body>
+</html>
+
                 
                 <!-- System Requirements -->
                 <div class="bg-slate-800/80 rounded-xl p-6 mb-8 border border-slate-700">
@@ -652,3 +824,4 @@
     </script>
 </body>
 </html>
+
