--- a/guide.html
+++ b/guide.html
@@ -60,170 +60,210 @@
                 </div>
             
 
+ 
+
   <style>
-    body {
+    /* Reset default margin and height */
+    html, body {
+      margin: 0;
+      height: 100%;
       background: #121212;
       color: #e0e0e0;
       font-family: Arial, sans-serif;
+    }
+
+    /* Container to center content vertically & horizontally */
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh; /* full viewport height */
       padding: 20px;
-      max-width: 700px;
-      margin: auto;
+      box-sizing: border-box;
     }
-    h1, h2 {
-      color: #00ffc8;
-    }
-    section {
-      margin-bottom: 40px;
+
+    /* Card style box */
+    .card {
       background: #1e1e1e;
-      padding: 20px;
-      border-radius: 10px;
+      border-radius: 12px;
+      padding: 30px 40px;
+      max-width: 500px;
+      width: 100%;
+      box-shadow: 0 0 15px rgba(0, 255, 200, 0.3);
     }
+
+    h1 {
+      color: #00ffc8;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
     label {
       display: block;
-      margin-top: 10px;
+      margin-top: 15px;
       font-weight: bold;
+      font-size: 1rem;
     }
+
     input[type="text"], input[type="number"] {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
+      padding: 10px 12px;
+      margin-top: 6px;
       border: none;
-      border-radius: 5px;
+      border-radius: 6px;
       background: #2a2a2a;
       color: #fff;
       font-size: 1rem;
+      box-sizing: border-box;
+      transition: background-color 0.3s ease;
     }
+
+    input[type="text"]:focus, input[type="number"]:focus {
+      background: #383838;
+      outline: none;
+    }
+
     button {
+      width: 100%;
       background: #00ffc8;
       color: #000;
       border: none;
-      padding: 12px 24px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 15px;
-      font-size: 1rem;
+      padding: 14px 0;
+      border-radius: 8px;
+      font-size: 1.1rem;
       font-weight: bold;
-      transition: background 0.3s ease;
+      cursor: pointer;
+      margin-top: 25px;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
       background: #00b38a;
     }
+
     .suggestions {
-      margin-top: 20px;
-      padding: 15px;
+      margin-top: 25px;
       background: #2a2a2a;
-      border-left: 4px solid #00ffc8;
+      border-left: 5px solid #00ffc8;
       border-radius: 6px;
+      padding: 18px 20px;
       line-height: 1.5;
       font-size: 1rem;
+      min-height: 130px;
+      white-space: pre-line;
+    }
+
+    @media (max-width: 600px) {
+      .card {
+        padding: 25px 20px;
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>🎮 Game Setup & Graphics Tweaks</h1>
+  <div class="container">
+    <div class="card">
+      <h1>🎮 Game Setup & Graphics Tweaks</h1>
 
-  <section>
-    <h2>🛠️ Get Custom Graphics Settings</h2>
-    <label for="inputGame">Game Name:</label>
-    <input type="text" id="inputGame" placeholder="e.g., GTA V" />
+      <label for="inputGame">Game Name:</label>
+      <input type="text" id="inputGame" placeholder="e.g., GTA V" />
 
-    <label for="inputGPU">GPU:</label>
-    <input type="text" id="inputGPU" placeholder="e.g., GTX 1650" />
+      <label for="inputGPU">GPU:</label>
+      <input type="text" id="inputGPU" placeholder="e.g., GTX 1650" />
 
-    <label for="inputCPU">CPU:</label>
-    <input type="text" id="inputCPU" placeholder="e.g., Ryzen 5 3600" />
+      <label for="inputCPU">CPU:</label>
+      <input type="text" id="inputCPU" placeholder="e.g., Ryzen 5 3600" />
 
-    <label for="inputRAM">RAM (GB):</label>
-    <input type="number" id="inputRAM" placeholder="e.g., 16" min="1" />
+      <label for="inputRAM">RAM (GB):</label>
+      <input type="number" id="inputRAM" placeholder="e.g., 16" min="1" />
 
-    <button onclick="generateGraphicsSummary()">Get Game Settings</button>
+      <button onclick="generateGraphicsSummary()">Get Game Settings</button>
 
-    <div class="suggestions" id="graphicsOutput"></div>
-  </section>
+      <div class="suggestions" id="graphicsOutput"></div>
+    </div>
+  </div>
 
   <script>
-   function generateGraphicsSummary() {
-  const game = document.getElementById("inputGame").value.toLowerCase().trim();
-  const gpu = document.getElementById("inputGPU").value.toLowerCase().trim();
-  const cpu = document.getElementById("inputCPU").value.toLowerCase().trim();
-  const ramInput = document.getElementById("inputRAM").value.trim();
-  const ram = parseInt(ramInput);
+    function generateGraphicsSummary() {
+      const game = document.getElementById("inputGame").value.toLowerCase().trim();
+      const gpu = document.getElementById("inputGPU").value.toLowerCase().trim();
+      const cpu = document.getElementById("inputCPU").value.toLowerCase().trim();
+      const ramInput = document.getElementById("inputRAM").value.trim();
+      const ram = parseInt(ramInput);
 
-  if (!game || !gpu || !cpu || !ramInput || isNaN(ram)) {
-    document.getElementById("graphicsOutput").innerHTML = "<em>Please fill in all fields with valid data.</em>";
-    return;
-  }
+      if (!game || !gpu || !cpu || !ramInput || isNaN(ram)) {
+        document.getElementById("graphicsOutput").innerHTML = "<em>Please fill in all fields with valid data.</em>";
+        return;
+      }
 
-  let summary = `<strong>🔍 Custom Settings for ${game.toUpperCase()}</strong><br><br>`;
+      let summary = `🔍 Custom Settings for <strong>${game.toUpperCase()}</strong>\n\n`;
 
-  // Detect GPU tier
-  const gpuLower = gpu.toLowerCase();
+      // Helper function to check if string contains any keyword in array
+      function gpuMatch(keywords) {
+        return keywords.some(keyword => gpu.includes(keyword));
+      }
 
-  // Helper function to check if GPU string contains any keyword in an array
-  function gpuMatch(keywords) {
-    return keywords.some(keyword => gpuLower.includes(keyword));
-  }
+      if (gpuMatch(["gtx 1050", "gtx 1650", "rx 5600", "gtx 1060"])) {
+        summary += "- Graphics Preset: Medium to Low\n";
+        summary += "- Recommended Resolution: 1080p\n";
+        summary += "- DLSS/FSR: Off or Balanced (if available)\n";
+        summary += "- Shadows: Low to Medium\n";
+        summary += "- Ray Tracing: Off (performance heavy)\n";
+      } else if (gpuMatch(["rtx 2060", "rtx 3060", "rx 6600", "rx 5700"])) {
+        summary += "- Graphics Preset: High\n";
+        summary += "- Recommended Resolution: 1080p or 1440p\n";
+        summary += "- DLSS/FSR: On (balanced or quality mode)\n";
+        summary += "- Shadows: Medium to High\n";
+        summary += "- Ray Tracing: Medium (if supported)\n";
+      } else if (gpuMatch(["rtx 3070", "rtx 3080", "rtx 4070", "rtx 4080", "rx 6800", "rx 6900", "rx 7900"])) {
+        summary += "- Graphics Preset: Ultra\n";
+        summary += "- Recommended Resolution: 1440p or 4K\n";
+        summary += "- DLSS/FSR: Quality or Ultra Performance\n";
+        summary += "- Shadows: High to Ultra\n";
+        summary += "- Ray Tracing: On (enabled for best visuals)\n";
+      } else {
+        summary += "- Graphics Preset: Low or Custom\n";
+        summary += "- Recommended Resolution: 720p or 900p\n";
+        summary += "- DLSS/FSR: Off\n";
+        summary += "- Shadows: Low\n";
+        summary += "- Ray Tracing: Off\n";
+      }
 
-  if (gpuMatch(["gtx 1050", "gtx 1650", "rx 5600", "gtx 1060"])) {
-    summary += "- Graphics Preset: Medium to Low<br>";
-    summary += "- Recommended Resolution: 1080p<br>";
-    summary += "- DLSS/FSR: Off or Balanced (if available)<br>";
-    summary += "- Shadows: Low to Medium<br>";
-    summary += "- Ray Tracing: Off (performance heavy)<br>";
-  } else if (gpuMatch(["rtx 2060", "rtx 3060", "rx 6600", "rx 5700"])) {
-    summary += "- Graphics Preset: High<br>";
-    summary += "- Recommended Resolution: 1080p or 1440p<br>";
-    summary += "- DLSS/FSR: On (balanced or quality mode)<br>";
-    summary += "- Shadows: Medium to High<br>";
-    summary += "- Ray Tracing: Medium (if supported)<br>";
-  } else if (gpuMatch(["rtx 3070", "rtx 3080", "rtx 4070", "rtx 4080", "rx 6800", "rx 6900", "rx 7900"])) {
-    summary += "- Graphics Preset: Ultra<br>";
-    summary += "- Recommended Resolution: 1440p or 4K<br>";
-    summary += "- DLSS/FSR: Quality or Ultra Performance<br>";
-    summary += "- Shadows: High to Ultra<br>";
-    summary += "- Ray Tracing: On (enabled for best visuals)<br>";
-  } else {
-    summary += "- Graphics Preset: Low or Custom<br>";
-    summary += "- Recommended Resolution: 720p or 900p<br>";
-    summary += "- DLSS/FSR: Off<br>";
-    summary += "- Shadows: Low<br>";
-    summary += "- Ray Tracing: Off<br>";
-  }
+      // RAM advice
+      if (ram < 8) {
+        summary += "- ⚠️ RAM below 8GB can cause performance issues, close background apps.\n";
+      } else if (ram < 16) {
+        summary += "- RAM is decent, but 16GB is recommended for smooth gameplay.\n";
+      } else {
+        summary += "- ✅ RAM is excellent for modern gaming.\n";
+      }
 
-  // RAM advice
-  if (ram < 8) {
-    summary += "- ⚠️ RAM below 8GB can cause performance issues, close background apps.<br>";
-  } else if (ram < 16) {
-    summary += "- RAM is decent, but 16GB is recommended for smooth gameplay.<br>";
-  } else {
-    summary += "- ✅ RAM is excellent for modern gaming.<br>";
-  }
+      // CPU helper inside main function
+      function cpuMatch(keywords) {
+        return keywords.some(keyword => cpu.includes(keyword));
+      }
 
-  // CPU advice
-  if (cpuMatch(["i3", "dual core", "athlon", "pentium"])) {
-    summary += "- ⚠️ CPU may bottleneck in demanding games; consider upgrade.<br>";
-  } else if (cpuMatch(["i5", "ryzen 5"])) {
-    summary += "- CPU suitable for most games at 1080p.<br>";
-  } else if (cpuMatch(["i7", "ryzen 7", "i9", "ryzen 9"])) {
-    summary += "- ✅ High-performance CPU for demanding games and streaming.<br>";
-  } else {
-    summary += "- CPU info unclear, ensure it meets game minimum requirements.<br>";
-  }
+      if (cpuMatch(["i3", "dual core", "athlon", "pentium"])) {
+        summary += "- ⚠️ CPU may bottleneck in demanding games; consider upgrade.\n";
+      } else if (cpuMatch(["i5", "ryzen 5"])) {
+        summary += "- CPU suitable for most games at 1080p.\n";
+      } else if (cpuMatch(["i7", "ryzen 7", "i9", "ryzen 9"])) {
+        summary += "- ✅ High-performance CPU for demanding games and streaming.\n";
+      } else {
+        summary += "- CPU info unclear, ensure it meets game minimum requirements.\n";
+      }
 
-  summary += "<br><em>🎯 Pro Tip: Keep GPU drivers updated and close unnecessary apps while gaming.</em>";
+      summary += "\n🎯 Pro Tip: Keep GPU drivers updated and close unnecessary apps while gaming.";
 
-  document.getElementById("graphicsOutput").innerHTML = summary;
-
-  // Helper function for CPU check inside main function
-  function cpuMatch(keywords) {
-    return keywords.some(keyword => cpu.includes(keyword));
-  }
-}
-
+      // Replace \n with <br> for HTML display
+      document.getElementById("graphicsOutput").innerHTML = summary.replace(/\n/g, "<br>");
+    }
   </script>
-
 </body>
+
+
 
 
                 
@@ -820,6 +860,7 @@
     </script>
 </body>
 </html>
+
 
 
 
